--- a/webVRender/shell.html
+++ b/webVRender/shell.html
@@ -39,7 +39,24 @@
     </div>
 
   <script type='text/javascript'>
-    window.wsport = 8017;
+    
+	    function getParameterByName(name) {
+            name = name.replace(/[\[\]]/g, "\\$&");
+            var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+                results = regex.exec(window.location.href);
+            if (!results) return null;
+            if (!results[2]) return '';
+            return decodeURIComponent(results[2].replace(/\+/g, " "));
+        }
+		var portValue = getParameterByName('port');
+
+        // Check if the parameter was found and display it
+        if (portValue !== null) {
+			window.wsport = parseInt(portValue);
+        } else {
+            window.wsport = 8017;
+        }
+		
 	var Module = {
 		preRun: [],
 		postRun: [],
